# Luna-OS

./: .gitignore  .gitmodules  CMakeLists.txt  CodingStyle.txt  Linker.ld  README.md  create_disk.py  format_disk.py  grub.cfg  i686-elf-toolchain.cmake  update_image.sh
cmake/: generate_config_site.cmake  patch_cxx.cmake  patch_pdclib.cmake  profile_detection.cmake
include/microgl/bitmaps/: buffer.h
kern/entry/: main.cpp
kern/i386/pc/: cpuid.c  interrupts.c
kern/lib/: oarray.c  oarray.h  panic.h
kern/luna/: Engine.cpp  Engine.h  Graphics.h
kern/luna/std/: new.cpp  new.h
kern/mm/: kmemory.c  kmemory.h  paging.c  paging.h
kernel/arch/i386/: boot.cpp  boot.s  descriptor_tables.c  descriptor_tables.h  interrupt.s  kernel.cpp  kernel.hpp  multiboot.h
kernel/arch/i386/pc/: linker.ld
kernel/drivers/: disk_interface.c  disk_interface.h  fat32.c  fat32.cpp  fat32.h  fat32.old  fat_types.h  ide.c  ide.cpp  ide.h  ide.old  keyboard.c  keyboard.h  screen.c  screen.h  timer.c  timer.h  ufat.c  ufat.h  voltron.c  voltron.h  voltron.old
kernel/entry/: main.cpp  main.example  main.old
kernel/lib/: sorted_array.c  sorted_array.h
kernel/luna/: Engine.cpp  Engine.h  Graphics.h  VBE.c  VBE.h  portablegl.h
kernel/luna/c++/: new  new.cpp
kernel/luna/libc/: assert.h  ctype.h  divmod.c  kernel.h  limits.h  malloc.h  stdarg.h  stdio.c  string.c  strutil.h  vbe.c  vsprintf.h  wchar.h
kernel/luna/std/: assert.h  cstddef  divmod.c  divmod.h  new.cpp  new.h  stdio.c  string.c  string.h
kernel/mm/: heap.c  heap.h  kmalloc.c  kmalloc.h  kmemdetect.c  kmemdetect.h  paging.c  paging.h  sbrk.c  sbrk.h
kernel/sys/: blkdev.c  blkdev.h  endian.c  endian.h  errno.c  errno.h  kernel_syscalls.c  kernel_write.c  scheduler.c  scheduler.h  sync.c  sync.h  system.c  system.h  thread.c  thread.h  time.c  time.h  times.c  times.h  types.h
kernel/sys/_types/: _mbstate_t.h
libc/: stddef.h  string.c  string.h
libc/stdlib/: assert.h  ctype.h  float.h  kernel.c  limits.h  math.c  math.h  stdarg.h  stdbool.h  stdint.h  stdlib.h  string.c  string.h  vsprintf.c
os/: lv_conf.h
os/luna/: Engine.cpp  Engine.h  GLContext.h  Graphics.h  Renderer.h  gl_context.h  main.cpp
os/luna/c++/: cta.cpp  new  new.cpp
sdk/: CMakeLists.txt  i686-elf-toolchain.cmake  lvgl.cmake
source/: bleskos.c  bleskos.h  boot.c
source/assembly/: bleskos.asm
source/bootloader/: bootloader.asm
source/drivers/filesystems/: descriptor_of_file_sectors.c  filesystem_cdda.c  filesystem_ext.c  filesystem_fat.c  filesystem_iso9660.c  list_of_connected_partitions.c  main.c  virtual_file_system.c
source/drivers/graphic/: intel.c  main.c
source/drivers/network/ethernet/: amd_pcnet.c  realtek_8139.c
source/drivers/system/: hpet.c  memory.c  memory.h  pci.c  pit.h  user_input.c
source/drivers/usb/: main.c
source/libraries/archive_formats/: zip.c
source/libraries/binary_programs_interface/: main.c
source/libraries/decoders/: byte_stream.c  deflate.c  huffman.c  lzw.c
source/libraries/drawing/: draw_scalable_font.c
source/libraries/file_dialog/: file_dialog.c
source/libraries/graphic_formats/: image.c  png.c  qoi.c
source/libraries/graphic_formats/gif_writer/: gif_writer.h
source/libraries/graphic_formats/nanojpeg/: nanojpeg.c
source/libraries/graphic_user_interface_elements/: text_area.c  window.c
source/libraries/logging/: logging.c
source/libraries/program_interface/: mouse_cursor.c  program_interface.c  program_memory.c
source/libraries/sound_formats/: mp3.c  sound.c  wav.c
source/libraries/text_formats/: xml.c
source/programs/main_window/: main_window.c
src/: Boot.cpp  Engine.cpp  Engine.h  Graphics.cpp  Graphics.h  Kernel.cpp  Renderer.h  VBE.h  cxx_support.cpp  memory.cpp  memory.h  new.cpp  new.h  stdint.h  string.h  stubs.cpp
src/GL/: GLContext.h
src/luna/: GPU.cpp  GPU.h  fastmem.cpp  fastmem.h  math.h
src/std/: cxx_support.cpp  memcpy.cpp  memory.cpp  memory.h  new.cpp  new.h  spinlock.cpp  spinlock.h  stdint.h  string.h
